@@ -4,6 +4,7 @@
   Show original message, not filtered message.
   Closes bug #281 (Error processing with Tesserarct: Detected 99 Diacritics)
 * Add option to profile only after successfully applying it
+* Fix default value for unpaper script direction.
 
 
 1.8.7 (22.09.2017):
